<resources>
    <string name="app_name">RixEngine Ads Demo</string>
    <string name="ads_tag">AD</string>

    <string name="admob_app_id">ca-app-pub-2258587227088809~4790418597</string>
    <string name="admob_banner_id">ca-app-pub-2258587227088809/4048182567</string>
    <string name="gam_banner_id">ca-app-pub-4885562717451614/9675235882</string>

    <string name="banner_ad">banner Ad</string>
    <string name="reward_ad">reward Ad</string>
    <string name="interstitial_ad">interstitial Ad</string>
    <string name="native_ad">native Ad</string>
    <string name="splash_ad">splash Ad</string>
    <string name="interstitial_video_ad">interstitial Ad - video</string>
    <string name="interstitial_banner_ad">interstitial Ad - banner</string>
    <string name="splash_video_ad">splash Ad - video</string>
    <string name="splash_banner_ad">splash Ad - banner</string>

    <string name="load_ad">load Ad</string>
    <string name="show_ad">show Ad</string>
    <string name="load_and_show_ad">load and show Ad</string>
    <string name="tip_message">Ad not loaded</string>

    <string name="loading">Ads loading……</string>
    <string name="load_success">loaded successfully</string>
    <string name="load_failed">Failed to load</string>
    <string name="show_ad_no_load">Please load the advertisement first</string>
    <string name="format_load_failed">Failed to load: %s</string>
    <string name="format_load_success">load success,It takes %d seconds for ads to load.</string>

    <string name="banner_ad_preload_mode">Banner AD Preload Mode</string>
    <string name="banner_ad_normal_mode">Banner AD Normal Mode</string>

    <string name="list_item_banner_title">Banner test title ad</string>
    <string name="list_item_banner_desc">Banner test desc ad</string>
    <string name="list_item_native_title">native test title ad</string>
    <string name="list_item_native_desc">native test desc ad</string>
    <string name="other_platform_demo">Aggregated Ad Platform Demo</string>
    <string name="alx_sdk_demo">Alx Ad Demo</string>
    <string name="clear_log">clear Log</string>
    <string name="format_ad_unitid">%s Unit ID: %s</string>

</resources>
