<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/banner_ad_preload_mode"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                tools:ignore="InvalidId" />

            <TextView
                android:id="@+id/bn_load"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/load_ad"
                style="@style/style_btn"/>

            <TextView
                android:id="@+id/bn_show"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="10dp"
                android:text="@string/show_ad"
                style="@style/style_btn"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/banner_ad_normal_mode"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="3dp"
                android:textSize="16sp"
                tools:ignore="InvalidId" />

            <TextView
                android:id="@+id/bn_load_show"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/load_and_show_ad"
                style="@style/style_btn"/>

            <com.rixengine.api.AlxBannerView
                android:id="@+id/do_ad_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <FrameLayout
                android:id="@+id/ad_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/tv_clear_log"
                android:layout_width="100dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/clear_log"
                style="@style/style_btn"
                android:layout_gravity="end"/>

            <TextView
                android:id="@+id/tv_show_log"
                android:layout_width="match_parent"
                android:layout_height="@dimen/log_height"
                style="@style/style_log"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>